# LiDAR_barrier_arm

./: .gitignore  README.md  README_RU.md
alg_C++/: CMakeLists.txt  README.md  package.xml
alg_C++/include/barrier_detection/: clustering.hpp  geometry.hpp  preprocess.hpp  reader.hpp
alg_C++/src/: .algorithm_node.cpp.swp  algorithm_node.cpp  clustering.cpp  geometry.cpp  preprocess.cpp  reader.cpp
alg_Python/: README.md  algorithm_node.py  clustering.py  geometry.py  preprocess.py  reader.py
rosbag2_lidar_data/: metadata.yaml
